--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </header>
 
 
-        <!--Page d'Acceuil : Background Tonneaux + dionysos & Phrase d'accroche-->
+        <!--NOTRE HISTOIRE : PHOTO GRAPPE DE RAISIN + BLOC TEXTE -->
 
 
         <section>
@@ -62,6 +62,38 @@
 
         </section>
 
+        <!--NOS CHAMPAGNES : 3 BLOCS COMPORTANT = 1BLOC PHOTO + TEXTE EN DESSOUS + BOUTON  -->
+        <section>
+
+            <article><div id="rectangle"> Nos Champagnes </div></article>
+
+
+        </section>
+
+        <!--NOS ROUGES : 3 BLOCS COMPORTANT = 1BLOC PHOTO + TEXTE EN DESSOUS + BOUTON  -->
+        <section>
+
+            <article><div id="rectangle"> Nos Vins Rouges </div></article>
+
+        </section>
+
+        <!--NOS BLANCS : 3 BLOCS COMPORTANT = 1BLOC PHOTO + TEXTE EN DESSOUS + BOUTON  -->
+
+        <section>
+
+            <article><div id="rectangle"> Nos Vins Blancs </div></article>
+
+
+        </section>
+
+        <!--CONTACT = 1 BLOC COMPORTANT COORDONÉE + MAP & 1 BLOC FORMULAIRE & 1 FOOTER-->
+
+        <section>
+
+            <article><div id="rectangle"> Contact </div></article>
+
+
+        </section>
 
         
 
